# SnapVault-High-Performance-Snapshot-Based-Backup-Engine

./: CMakeLists.txt  README.md
src/: chunker.cpp  chunker.h  file_scanner.cpp  file_scanner.h  hasher.cpp  hasher.h  main.cpp  restore.cpp  snapshot.cpp  snapshot.h  storage.cpp  storage.h  thread_pool.cpp  thread_pool.h
